add jspecify, nullaway, archunit and fix things